--- a/BFKSupportApp/app/src/main/AndroidManifest.xml
+++ b/BFKSupportApp/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BFKSupportApp"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".AddionalDataCharacterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AdditionalInformationCharacterActivity"
+            android:exported="false"
+            android:label="@string/title_activity_additional_information_character"
+            android:theme="@style/Theme.BFKSupportApp" />
         <activity
             android:name=".DataEntryView"
             android:exported="false" />
@@ -19,7 +27,7 @@
             android:name=".DataEntryAdapter"
             android:exported="false" />
         <activity
-            android:name=".Calculator"
+            android:name=".CalculatorActivity"
             android:exported="false" />
         <activity
             android:name=".ItemsActivity"
@@ -41,7 +49,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
